--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=AirportX
+application.vendor=AVA
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/AirportX.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
@@ -45,7 +47,7 @@ javac.test.classpath=\
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
-javadoc.author=false
+javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
 javadoc.nonavbar=false
@@ -53,7 +55,7 @@ javadoc.notree=false
 javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
-javadoc.version=false
+javadoc.version=true
 javadoc.windowtitle=
 main.class=airportx.AirportXUI
 manifest.file=manifest.mf
@@ -66,7 +68,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=-verbose
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
